# Pointcloud_from_rgbd

./: CMakeLists.txt  README.md  point_cloud.cpp
rgbd_dataset_freiburg1_xyz/: pointcloud.py
